Better spec verification on cloud service transformation to hosts

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -236,6 +236,12 @@ spec:
                       aws:
                         items:
                           properties:
+                            connState:
+                              enum:
+                              - new
+                              - est
+                              - ""
+                              type: string
                             flow:
                               enum:
                               - ingress
