--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -85,6 +85,12 @@ spec:
               cpuPressure:
                 description: CPUPressureSpec represents a cpu pressure disruption
                 nullable: true
+                properties:
+                  count:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    x-kubernetes-int-or-string: true
                 type: object
               diskPressure:
                 description: DiskPressureSpec represents a disk pressure disruption
