feat(disruption): custom reporting

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -16,6 +16,8 @@ spec:
     metadata:
       labels:
         app: chaos-controller
+      annotations:
+        kubectl.kubernetes.io/default-container: manager
     spec:
       serviceAccount: chaos-controller
       containers:
