--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -10,6 +10,12 @@ metadata:
   namespace: chaos-demo # disruption resource must be in the same namespace as targeted pods
 spec:
   dryRun: false # optional, enable dry-run mode (chaos pods will be created but won't inject anything)
+  reporting: # optional, add custom notification for this disruption
+    slackChannel: team-slack-channel # required, custom slack channel to send notifications to
+    purpose:
+      | # required, purpose/contextual informations to explain reasons of the disruption launch, can contain markdown formatting
+      *full network drop*: _aims to validate retry capabilities of demo-curl_. Contact #team-test for more informations.
+    notificationTypeLevel: Info # optional, minimal notification type to be notified, default is Success, available options are Info, Success, Warning, Error
   level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
   selector: # label selector[s] to target pods
     app: demo
