Use a boolean to disable default allowed hosts

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -300,6 +300,8 @@ spec:
                     maximum: 100
                     minimum: 0
                     type: integer
+                  disableAllowedHosts:
+                    type: boolean
                   drop:
                     maximum: 100
                     minimum: 0
