--- a/dogfood/client/chart/templates/deployment.yaml
+++ b/dogfood/client/chart/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: dogfood-client
+            claimName: dogfood-client-pvc
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -43,11 +43,6 @@ spec:
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-        - name: io
-          image: ubuntu:focal
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/bin/bash"]
-          args: ["-c", "while true; do dd if=/dev/zero of=/mnt/data/iodump bs=20M count=30 oflag=direct; sleep 1; done"]
           volumeMounts:
             - mountPath: /mnt/data
               name: data
