--- a/dogfood/client/chart/templates/volumeclaim.yaml
+++ b/dogfood/client/chart/templates/volumeclaim.yaml
@@ -6,10 +6,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: dogfood-client
+  name: dogfood-client-pvc
   namespace: chaos-demo
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
