--- a/examples/reporting_network_drop.yaml
+++ b/examples/reporting_network_drop.yaml
@@ -14,7 +14,7 @@ spec:
     purpose:
       | # required, purpose/contextual informations to explain reasons of the disruption launch, can contain markdown formatting
       *full network drop*: _aims to validate retry capabilities of demo-curl_. Contact #team-test for more informations.
-    notificationTypeLevel: Info # optional, minimal notification type to be notified, default is Success, available options are Info, Success, Warning, Error
+    minNotificationType: Info # optional, minimal notification type to be notified, default is Success, available options are Info, Success, Warning, Error
   level: pod
   selector:
     app: demo-curl
