Add a way for users to disable allowed hosts for a single disruption (#610)
* Use a boolean to disable default allowed hosts

* add allowedHosts to chaosli

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -333,6 +333,8 @@ spec:
                     maximum: 100
                     minimum: 0
                     type: integer
+                  disableDefaultAllowedHosts:
+                    type: boolean
                   drop:
                     maximum: 100
                     minimum: 0
