metrics being sent to datadog correctly

--- a/dogfood/client/chart/templates/volumeclaim.yaml
+++ b/dogfood/client/chart/templates/volumeclaim.yaml
@@ -9,6 +9,7 @@ metadata:
   name: dogfood-client-pvc
   namespace: chaos-demo
 spec:
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
