--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   dryRun: false # optional, enable dry-run mode (chaos pods will be created but won't inject anything)
   reporting: # optional, add custom notification for this disruption
-    slackChannel: team-slack-channel # required, custom slack channel to send notifications to
+    slackChannel: team-slack-channel # required, custom slack channel to send notifications to (can be a name or slack channel ID)
     purpose:
       | # required, purpose/contextual informations to explain reasons of the disruption launch, can contain markdown formatting
       *full network drop*: _aims to validate retry capabilities of demo-curl_. Contact #team-test for more informations.
