--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -43,7 +43,7 @@ controller:
     host: "" # host to use to serve requests
     port: 9443 # port to use to serve requests
   safeMode:
-    enable: true
+    enable: false
     namespaceThreshold: 80
     clusterThreshold: 66
 
