Fix Scope/Typo in Safemode (#618)
* fix networkThreshold typo

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* feat(disruption): custom reporting (#612)

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* Update network disruption docs and examples with cloud managed services filters (#616)

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* doc: improve node disruption CHAOS-240 (#614)

* doc: improve node disruption

Jira: CHAOS-240

* doc: change info to warning

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* Remove wrongly push config in deploy (#615)

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* fix unset/0 logic for thresholds

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

* keep safeMode false for now

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>

Signed-off-by: Sam Azouzi <sam.azouzi@datadoghq.com>
Co-authored-by: Matthieu Bono <luphaz@users.noreply.github.com>
Co-authored-by: Joris Bonnefoy <joris.bonnefoy@datadoghq.com>
Co-authored-by: aymericDD <aymeric.daurelle@datadoghq.com>
Co-authored-by: Claire Chong <43993569+clairecng@users.noreply.github.com>

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -44,7 +44,7 @@ controller:
     port: 9443 # port to use to serve requests
   safeMode:
     enable: false
-    networkThreshold: 80
+    namespaceThreshold: 80
     clusterThreshold: 66
 
 injector:
