--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -66,6 +66,12 @@ spec:
                   type: object
                 nullable: true
                 type: array
+              annotationFilter:
+                additionalProperties:
+                  type: string
+                description: Set is a map of label:value. It implements Labels.
+                nullable: true
+                type: object
               containerFailure:
                 description: ContainerFailureSpec represents a container failure injection
                 nullable: true
