--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -144,7 +144,7 @@ spec:
               filter:
                 nullable: true
                 properties:
-                  annotations:
+                  annotation:
                     additionalProperties:
                       type: string
                     description: Set is a map of label:value. It implements Labels.
