--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ bin/handler/handler*
 bin/chaosli/chaosli.tar.gz
 bin/chaosli/chaosli_darwin_amd64
 bin/chaosli/chaosli_darwin_amd64.sha256sum
+bin/chaosli/chaosli_darwin_arm64*
 chart/install.yaml
 dogfood/bin
 out
