CHAOS-408: Allow for filtering targets with annotations (#630)
* AnnotationFilter

* Use a more flexible yaml structure

* Use official annotation

* Add annotation filter to chaosli explain

* Add filters to chaosli create

* Rename json tag

* Add filter to e2e-tests

--- a/examples/complete.yaml
+++ b/examples/complete.yaml
@@ -20,6 +20,9 @@ spec:
   selector: # label selector[s] to target pods
     app: demo
     team: developer
+  filter:
+    annotations:
+      aws-zone: us-east-1b # filter selected targets to only those with this annotation
   advancedSelector: # advanced selectors can select targets on something else than an exact key/value match
     - key: app
       operator: Exists
