--- a/lima_alpine.yaml
+++ b/lima_alpine.yaml
@@ -24,7 +24,7 @@ provision:
 - mode: system
   script: |
     #!/bin/bash
-    apk add curl curl-dev
+    apk add curl curl-dev open-iscsi
     curl -sfL https://get.k3s.io | sh -
     if ! timeout 90s bash -c "until test -e /run/k3s/containerd/containerd.sock; do sleep 3; done"; then
             echo >&2 "containerd is not running"
@@ -32,6 +32,9 @@ provision:
     fi
     mkdir -p /run/containerd/
     ln -s /run/k3s/containerd/containerd.sock /run/containerd/containerd.sock
+    /etc/init.d/iscsid start
+    mount --make-rshared /var/lib/
+    mount --make-rshared /
 
 # wait for k3s to be running
 probes:
