Review minikube image load

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,13 +192,13 @@ jobs:
       - run:
           name: Install requirements
           <<: *working_directory
-          command: make install-cert-manager KUBECTL="minikube kubectl --"
+          command: make lima-install-cert-manager KUBECTL="minikube kubectl --"
       - run:
           name: Build and load images
           <<: *working_directory
           environment:
             GOBIN: /home/circleci/.go_workspace/bin
-          command: make minikube-build
+          command: make minikube-build-all
       - run:
           name: Run e2e tests
           <<: *working_directory
