--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -1,15 +1,20 @@
-FROM ubuntu:focal as injector
+FROM ubuntu:kinetic as injector
 
 ARG TARGETARCH
+ENV BPF_DISKFAILURE_NAME "bpf-diskfailure-${TARGETARCH}"
 
 RUN apt-get update
-RUN apt-get -y install curl git gcc iproute2 coreutils python3 iptables
+RUN apt-get -y install curl git gcc iproute2 coreutils python3 iptables libelf1
 
 COPY injector_${TARGETARCH} /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
-RUN curl -L  https://github.com/trailofbits/ebpfault/releases/download/v1.1.0/ebpfault-1.1.0-1.x86_64.tar.gz > ebpfault.tar.gz && \
-    tar xvfz ebpfault.tar.gz && \
-    mv ebpfault-1.1.0-1.x86_64/bin/ebpfault /usr/bin/ && \
-    rm -rf ebpfault-1.1.0-1.x86_64 ebpfault.tar.gz
+
+RUN export BPF_OBJECT="$(echo $BPF_DISKFAILURE_NAME | sed -e 's/amd64/x86/').bpf.o" && \
+    curl -L  https://github.com/aymericDD/bpf-diskfailure/releases/download/v0.1.0/${BPF_DISKFAILURE_NAME}.tar.gz > ${BPF_DISKFAILURE_NAME}.tar.gz && \
+    mkdir -p ${BPF_DISKFAILURE_NAME} &&  \
+    tar xvf ${BPF_DISKFAILURE_NAME}.tar.gz -C ${BPF_DISKFAILURE_NAME} && \
+    mv ${BPF_DISKFAILURE_NAME}/$BPF_OBJECT /$BPF_OBJECT && \
+    mv ${BPF_DISKFAILURE_NAME}/${BPF_DISKFAILURE_NAME} /usr/local/bin/bpf-diskfailure && \
+    rm -rf ${BPF_DISKFAILURE_NAME}/ ${BPF_DISKFAILURE_NAME}.tar.gz
 
 ENTRYPOINT ["/usr/local/bin/injector"]
