--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.0
+    controller-gen.kubebuilder.io/version: v0.7.0
   creationTimestamp: null
   name: disruptions.chaos.datadoghq.com
 spec:
@@ -95,6 +95,11 @@ spec:
               diskFailure:
                 description: DiskFailureSpec represents a disk pressure disruption
                 nullable: true
+                properties:
+                  path:
+                    type: string
+                required:
+                - path
                 type: object
               diskPressure:
                 description: DiskPressureSpec represents a disk pressure disruption
