fix: typo error

--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -10,7 +10,7 @@ COPY injector_${TARGETARCH} /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
 
 RUN curl -LO http://ftp.de.debian.org/debian/pool/main/g/glibc/libc6_2.36-8_${TARGETARCH}.deb && \
-    dpkg -i libc6_2.36-8_${TARGETARCH}.deb \
+    dpkg -i libc6_2.36-8_${TARGETARCH}.deb
 
 RUN curl -LO  https://github.com/aymericDD/bpf-diskfailure/releases/download/v0.1.0/${BPF_DISKFAILURE_NAME}.tar.gz && \
     mkdir -p ${BPF_DISKFAILURE_NAME}
