feat: .spelling and circleci job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,7 +238,6 @@ jobs:
             make install-protobuf UNZIP_BINARY=unzip PROTOC_OS=linux
             make generate-disruptionlistener-protobuf
       - run: git diff --exit-code ':!go.*'
-
   # ensures that the grpc protobuf files genereated by dogfood/chaosdogfood/chaosdogfood.proto are up to date
   chaosdogfood-protobuf:
     executor: golang
@@ -251,6 +250,23 @@ jobs:
             make install-protobuf UNZIP_BINARY=unzip PROTOC_OS=linux
             make generate-chaosdogfood-protobuf
       - run: git diff --exit-code ':!go.*'
+  # runs a spellcheck job on documentation for
+  doc-spellcheck:
+    docker:
+      - image: tmaier/markdown-spellcheck:latest
+    steps:
+      - checkout
+      - run:
+          name: Spell check
+          command: mdspell --report --en-us --ignore-numbers --ignore-acronyms "docs/**/*.md"
+      - run:
+          name: Error Message
+          when: on_fail
+          command: |
+            echo "please check out https://github.com/lukeapage/node-markdown-spellcheck for local testing"
+            echo "or run \
+            'docker run --rm -ti -v $(pwd):/workdir tmaier/markdown-spellcheck:latest --ignore-numbers --ignore-acronyms --en-us 'docs/**/*.md''"
+            return 1
 
 workflows:
   version: 2
@@ -282,3 +298,4 @@ workflows:
       - license-header
       - disruptionlistener-protobuf
       - chaosdogfood-protobuf
+      - doc-spellcheck
