feat: makefile command update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,12 +259,7 @@ jobs:
       - run:
           name: Spell check
           command: |
-            mdspell --report --en-us --ignore-numbers --ignore-acronyms "docs/**/*.md" || \
-            (\
-              echo "please check out https://github.com/lukeapage/node-markdown-spellcheck for local testing" && \
-              echo "or run 'docker run --rm -ti -v $(pwd):/workdir tmaier/markdown-spellcheck:latest --ignore-numbers --ignore-acronyms --en-us 'docs/**/*.md''"
-              return 0 \
-            )
+            mdspell --report --en-us --ignore-numbers --ignore-acronyms "docs/**/*.md" || echo "please run `make spellcheck` for local testing"
 
 workflows:
   version: 2
