--- a/examples/network_cloud.yaml
+++ b/examples/network_cloud.yaml
@@ -30,4 +30,4 @@ spec:
           protocol: tcp # optional, protocol to drop packets on (can be tcp or udp, defaults to both)
           flow: ingress # optional, flow direction (egress: outgoing traffic, ingress: incoming traffic, defaults to egress)
           connState: new # optional, connection state (new: new connections, est: established connections, defaults to all states)
-    drop: 100 # delay (in milliseconds) to add to outgoing packets, 10% of jitter will be added by default
+    drop: 100 # percentage of outgoing packets to drop
