--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -8,14 +8,8 @@ RUN apt-get -y install curl git gcc iproute2 coreutils python3 iptables libelf1
 
 COPY injector_${TARGETARCH} /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
-
-RUN export BPF_DISKFAILURE_NAME_ARCH="$(echo $BPF_DISKFAILURE_NAME | sed -e 's/amd64/x86/')" && \
-    curl -LO  https://github.com/aymericDD/bpf-diskfailure/releases/download/v0.1.0/${BPF_DISKFAILURE_NAME}.tar.gz && \
-    mkdir -p ${BPF_DISKFAILURE_NAME} &&  \
-    tar xvf ${BPF_DISKFAILURE_NAME}.tar.gz -C ${BPF_DISKFAILURE_NAME} && \
-    mv ${BPF_DISKFAILURE_NAME}/$BPF_DISKFAILURE_NAME_ARCH.bpf.o /$BPF_DISKFAILURE_NAME_ARCH.bpf.o && \
-    mv ${BPF_DISKFAILURE_NAME}/${BPF_DISKFAILURE_NAME_ARCH} /usr/local/bin/bpf-diskfailure && \
-    rm -rf ${BPF_DISKFAILURE_NAME}/ ${BPF_DISKFAILURE_NAME}.tar.gz
+COPY bpf-diskfailure-${TARGETARCH} /usr/local/bin/bpf-diskfailure
+COPY bpf-diskfailure-${TARGETARCH}.bpf.o /bpf-diskfailure-${TARGETARCH}.bpf.o
 
 RUN curl -LO http://ftp.de.debian.org/debian/pool/main/g/glibc/libc6_2.36-8_${TARGETARCH}.deb && \
     dpkg -i libc6_2.36-8_${TARGETARCH}.deb
