--- a/ebpf/diskfailure/Dockerfile
+++ b/ebpf/diskfailure/Dockerfile
@@ -5,8 +5,8 @@ ARG GOVERSION=1.19.4
 ARG ARCH=arm64
 
 # Download development environment.
-RUN apt update && \
-    apt install -y \
+RUN apt-get update || apt-get update && \
+    apt-get install -y \
         curl \
         pahole \
         dwarves \
