--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:focal as injector
+FROM ubuntu:22.10 as injector
 
 ARG TARGETARCH
 ENV BPF_DISKFAILURE_NAME "bpf-diskfailure-${TARGETARCH}"
@@ -10,8 +10,5 @@ COPY injector_${TARGETARCH} /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
 COPY bpf-diskfailure-${TARGETARCH} /usr/local/bin/bpf-diskfailure
 COPY bpf-diskfailure-${TARGETARCH}.bpf.o /bpf-diskfailure-${TARGETARCH}.bpf.o
-
-RUN curl -LO http://ftp.de.debian.org/debian/pool/main/g/glibc/libc6_2.36-8_${TARGETARCH}.deb && \
-    dpkg -i libc6_2.36-8_${TARGETARCH}.deb
 
 ENTRYPOINT ["/usr/local/bin/injector"]
