--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ commands:
     steps:
       - run:
           name: Install git
-          command: apk update && apk add git
+          command: apk update && apk add git openssh
 
 templates:
   # sets the working directory to the project path
