refacto: clean in order to open the PR

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -93,7 +93,7 @@ spec:
                     x-kubernetes-int-or-string: true
                 type: object
               diskFailure:
-                description: DiskFailureSpec represents a disk pressure disruption
+                description: DiskFailureSpec represents a disk failure disruption
                 nullable: true
                 properties:
                   path:
