--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
       - run:
           name: Install requirements
           <<: *working_directory
-          command: make lima-install-cert-manager KUBECTL="minikube kubectl --"
+          command: make controller-gen lima-install-cert-manager KUBECTL="minikube kubectl --"
       - run:
           name: Build and load images
           <<: *working_directory
