--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -423,6 +423,8 @@ spec:
                     type: string
                   dormantDuration:
                     type: string
+                  initialDelay:
+                    type: string
                 required:
                 - activeDuration
                 - dormantDuration
